--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 <body>
 
     <div class="container">
-        <h1>JS Round Range Slider App</h1>
-
         <!-- slider app container -->
         <div id="app"></div>
     </div>
@@ -26,35 +24,11 @@
         // slider app options
         const opts = {
             DOMselector: '#app',
-            sliders: [
-                {
-                    radius: 100,
-                    min: 0,
-                    max: 100,
-                    step: 10,
-                    initialValue: 50,
-                    color: '#fdcb6e',
-                    displayName: 'Value 1'
-                },
-                {
-                    radius: 160,
-                    min: 0,
-                    max: 3000,
-                    step: 100,
-                    initialValue: 200,
-                    color: '#0984e3',
-                    displayName: 'Value 2'
-                },
-                {
-                    radius: 40,
-                    min: 0,
-                    max: 200,
-                    step: 10,
-                    initialValue: 20,
-                    color: '#d63031',
-                    displayName: 'Value 3'
-                }
-            ]
+            slider: {
+                radius: 180,
+                color: '#0984e3',
+                displayName: 'Value 2'
+            }
         };
 
         // instantiate the slider
