Added slider points

--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
     <script>
         // slider app options
         const opts = {
-            DOMselector: '#app',
-            slider: {
-                color: '#0984e3',
-                displayName: 'Value 2'
-            }
+            DOMselector: '#app'
         };
 
         // instantiate the slider
