--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>
         // slider app options
         const opts = {
-            DOMselector: '#app'
+            container: document.getElementById('app')
         };
 
         // instantiate the slider
